feat: flesh in achievement embeddables (#730)
