# services/player-achievements/src/module/player-achievements/player-achievements.controller.ts
@@ -11,32 +11,29 @@ import {
 import { IsUuidV4Validator } from '@cats-cradle/validation-schemas';
 import { v4 } from 'uuid';
 import { CreateDto } from './create.dto';
-import { PlayerAchievementsRepository } from '../../models/player-achievements.repository';
-import { PlayerAchievements } from '../../models/player-achievements.schema';
+import { PlayerAchievementRepository } from '../../models/player-achievement.repository';
+import { PlayerAchievement } from '../../models/player-achievement.schema';
 import { DeleteDto } from './delete.dto';
 import { QueryDto } from './query.dto';
+import { AchievementRepository } from '../../models/achievement.repository';
 
 @Controller({ path: 'player-achievements', version: ['1', VERSION_NEUTRAL] })
-export class PlayerAchievementsController {
+export class PlayerAchievementController {
   constructor(
-    private readonly _playerAchievementsRepository: PlayerAchievementsRepository,
+    private readonly _playerAchievementRepository: PlayerAchievementRepository,
+    private readonly _achievementRepository: AchievementRepository,
   ) {}
 
   @Get()
   async findByFilter(@Query() filterParams: QueryDto): Promise<any[]> {
-    const result = await this._playerAchievementsRepository.find({
-      filterParams,
-    });
+    const result = await this._playerAchievementRepository.find(filterParams);
 
-    if (!result) {
-      throw new NotFoundException();
-    }
     return result;
   }
 
   @Get()
   async findAll(): Promise<any> {
-    const result = await this._playerAchievementsRepository.findAll();
+    const result = await this._playerAchievementRepository.findAll();
     if (!result) {
       throw new NotFoundException();
     }
@@ -45,25 +42,29 @@ export class PlayerAchievementsController {
 
   @Post()
   async create(@Body() body: CreateDto) {
-    const playerAchievements = new PlayerAchievements();
-    if (IsUuidV4Validator(body.id)) {
-      playerAchievements._id = body.id;
-    } else {
-      playerAchievements._id = v4();
-    }
-    playerAchievements.playerId = body.playerId;
-    playerAchievements.achievementId = body.achievementId;
+    const achievement = await this._achievementRepository.findOneOrFail({
+      id: body.achievementId,
+    });
 
-    playerAchievements.createdAt = new Date().toISOString();
+    const playerAchievement = this._playerAchievementRepository.create(
+      new PlayerAchievement({
+        _id: IsUuidV4Validator(body.id) ? body.id : v4(),
+        playerId: body.playerId,
+        achievementId: achievement!._id,
+        progress: body.progress,
+        updatedAt: new Date().toISOString(),
+        createdAt: new Date().toISOString(),
+      }),
+    );
 
     // TODO publish event
 
-    return this._playerAchievementsRepository.create(playerAchievements);
+    return playerAchievement;
   }
 
   @Delete()
   async delete(@Body() body: DeleteDto) {
-    return this._playerAchievementsRepository.delete({
+    return this._playerAchievementRepository.delete({
       id: body.id,
     });
 
